kubernetes-security/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: homework
  labels:
    app: nginx
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      serviceAccountName: monitoring
      containers:
      - name: nginx
        image: nginx:1.27.2-alpine3.20-slim
        ports:
        - containerPort: 8000
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh", "-c", "rm -rf /homework/index.html"]
        volumeMounts:
        - name: homework-volume
          mountPath: /homework
        - name: cm-nginx-volume
          mountPath: /etc/nginx/conf.d
        - name: cm-key-volume
          mountPath: /homework/conf
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
      - name: monitoring
        image: curlimages/curl:8.10.1
        command: ['sh', '-c']
        args:
        - |
          TOKEN=$(cat /var/run/secrets/kubernetes.io/serviceaccount/token)
          while true; do curl -k -H "Authorization: Bearer $TOKEN" https://kubernetes.default.svc:443/metrics | tee /init/metrics.html && sleep 5; done
        volumeMounts:
        - name: homework-volume
          mountPath: /init
      volumes:
      - name: homework-volume
        persistentVolumeClaim:
          claimName: nginx-pvc
      - name: cm-nginx-volume
        configMap:
          name: nginx-cm
      - name: cm-key-volume
        configMap:
          name: keys-cm
      nodeSelector:
        homework: "true"
